@@ -7,29 +7,24 @@ import ippoz.madness.commons.datacategory.DataCategory;
 import ippoz.multilayer.detector.algorithm.DetectionAlgorithm;
 import ippoz.multilayer.detector.commons.algorithm.AlgorithmType;
 import ippoz.multilayer.detector.commons.configuration.AlgorithmConfiguration;
-import ippoz.multilayer.detector.commons.data.ExperimentData;
 import ippoz.multilayer.detector.commons.dataseries.DataSeries;
+import ippoz.multilayer.detector.commons.knowledge.KnowledgeType;
+import ippoz.multilayer.detector.commons.knowledge.data.MonitoredData;
 import ippoz.multilayer.detector.commons.support.AppLogger;
-import ippoz.multilayer.detector.commons.support.ThreadScheduler;
 import ippoz.multilayer.detector.metric.Metric;
-import ippoz.multilayer.detector.performance.TrainingTiming;
 import ippoz.multilayer.detector.reputation.Reputation;
 import ippoz.multilayer.detector.trainer.AlgorithmTrainer;
 import ippoz.multilayer.detector.trainer.ConfigurationSelectorTrainer;
 import ippoz.multilayer.detector.trainer.FixedConfigurationTrainer;
 
-import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.File;
-import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
-import java.util.AbstractMap.SimpleEntry;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Map.Entry;
+import java.util.Map;
 
 /**
  * The Class TrainerManager.
@@ -37,40 +32,11 @@ import java.util.Map.Entry;
  *
  * @author Tommy
  */
-public class TrainerManager extends ThreadScheduler {
-	
-	/** The setup folder. */
-	private String setupFolder;
-	
-	/** The data series domain. */
-	private String dsDomain;
-	
-	/** The scores folder. */
-	private String scoresFolder;
+public class TrainerManager extends TrainDataManager {
 	
 	/** The output folder. */
 	private String outputFolder;
-	
-	/** The experiments list. */
-	private List<ExperimentData> expList;
-	
-	/** The possible configurations. */
-	private HashMap<AlgorithmType, LinkedList<AlgorithmConfiguration>> confList;
-	
-	/** The chosen metric. */
-	private Metric metric;
-	
-	/** The chosen reputation metric. */
-	private Reputation reputation;
-	
-	/** The list of indicators. */
-	private List<DataSeries> seriesList;
-	
-	/** The algorithm types. */
-	private List<AlgorithmType> algTypes;
-	
-	private TrainingTiming tTiming;
-	
+		
 	private InvariantManager iManager;
 	
 	/**
@@ -84,18 +50,9 @@ public class TrainerManager extends ThreadScheduler {
 	 * @param reputation the chosen reputation metric
 	 * @param algTypes the algorithm types
 	 */
-	private TrainerManager(String setupFolder, String dsDomain, String scoresFolder, String outputFolder, List<ExperimentData> expList, HashMap<AlgorithmType, LinkedList<AlgorithmConfiguration>> confList, Metric metric, Reputation reputation, List<AlgorithmType> algTypes) {
-		super();
-		this.setupFolder = setupFolder;
-		this.dsDomain = dsDomain;
-		this.scoresFolder = scoresFolder;
+	private TrainerManager(String setupFolder, String dsDomain, String scoresFolder, String outputFolder, List<MonitoredData> expList, Map<AlgorithmType, List<AlgorithmConfiguration>> confList, Metric metric, Reputation reputation, List<AlgorithmType> algTypes) {
+		super(expList.get(0).getIndicators(), expList, setupFolder, dsDomain, scoresFolder, confList, metric, reputation, algTypes);
 		this.outputFolder = outputFolder;
-		this.expList = expList;
-		this.confList = confList;
-		this.metric = metric;
-		this.reputation = reputation;
-		this.algTypes = algTypes;
-		tTiming = new TrainingTiming();
 	}
 	
 	/**
@@ -110,10 +67,9 @@ public class TrainerManager extends ThreadScheduler {
 	 * @param dataTypes the data types
 	 * @param algTypes2 the algorithm types
 	 */
-	public TrainerManager(String setupFolder, String dsDomain, String scoresFolder, String outputFolder, List<ExperimentData> expList, HashMap<AlgorithmType, LinkedList<AlgorithmConfiguration>> confList, Metric metric, Reputation reputation, DataCategory[] dataTypes, List<AlgorithmType> algTypes2) {
-		this(setupFolder, dsDomain, scoresFolder, outputFolder, expList, confList, metric, reputation, algTypes2);
-		seriesList = generateDataSeries(dataTypes);
-		AppLogger.logInfo(getClass(), seriesList.size() + " Data Series Loaded");
+	public TrainerManager(String setupFolder, String dsDomain, String scoresFolder, String outputFolder, List<MonitoredData> expList, Map<AlgorithmType, List<AlgorithmConfiguration>> confList, Metric metric, Reputation reputation, DataCategory[] dataTypes, List<AlgorithmType> algTypes) {
+		super(expList.get(0).getIndicators(), expList, setupFolder, dsDomain, scoresFolder, confList, metric, reputation, dataTypes, algTypes);
+		this.outputFolder = outputFolder;
 	}
 	
 	/**
@@ -128,10 +84,9 @@ public class TrainerManager extends ThreadScheduler {
 	 * @param dataTypes the data types
 	 * @param algTypes the algorithm types
 	 */
-	public TrainerManager(String setupFolder, String dsDomain, String scoresFolder, String outputFolder, List<ExperimentData> expList, HashMap<AlgorithmType, LinkedList<AlgorithmConfiguration>> confList, Metric metric, Reputation reputation, List<AlgorithmType> algTypes, List<DataSeries> selectedSeries) {
-		this(setupFolder, dsDomain, scoresFolder, outputFolder, expList, confList, metric, reputation, algTypes);
-		seriesList = selectedSeries;
-		AppLogger.logInfo(getClass(), seriesList.size() + " Data Series Loaded");
+	public TrainerManager(String setupFolder, String dsDomain, String scoresFolder, String outputFolder, List<MonitoredData> expList, Map<AlgorithmType, List<AlgorithmConfiguration>> confList, Metric metric, Reputation reputation, List<AlgorithmType> algTypes, List<DataSeries> selectedSeries) {
+		super(expList.get(0).getIndicators(), expList, setupFolder, dsDomain, scoresFolder, confList, metric, reputation, algTypes, selectedSeries);
+		this.outputFolder = outputFolder;
 	}
 	
 	/**
@@ -146,15 +101,15 @@ public class TrainerManager extends ThreadScheduler {
 	 * @param dataTypes the data types
 	 * @param algTypes the algorithm types
 	 */
-	public TrainerManager(String setupFolder, String dsDomain, String scoresFolder, String outputFolder, List<ExperimentData> expList, HashMap<AlgorithmType, LinkedList<AlgorithmConfiguration>> confList, Metric metric, Reputation reputation, DataCategory[] dataTypes, List<AlgorithmType> algTypes, String[] selectedSeriesString) {
+	public TrainerManager(String setupFolder, String dsDomain, String scoresFolder, String outputFolder, List<MonitoredData> expList, Map<AlgorithmType, List<AlgorithmConfiguration>> confList, Metric metric, Reputation reputation, DataCategory[] dataTypes, List<AlgorithmType> algTypes, String[] selectedSeriesString) {
 		this(setupFolder, dsDomain, scoresFolder, outputFolder, expList, confList, metric, reputation, algTypes);
 		seriesList = parseSelectedSeries(selectedSeriesString, dataTypes);
 		AppLogger.logInfo(getClass(), seriesList.size() + " Data Series Loaded");
 	}
 	
 	private List<DataSeries> parseSelectedSeries(String[] selectedSeriesString, DataCategory[] dataTypes) {
-		LinkedList<DataSeries> finalDs = new LinkedList<DataSeries>();
-		LinkedList<DataSeries> all = generateDataSeries(dataTypes);
+		List<DataSeries> finalDs = new LinkedList<DataSeries>();
+		List<DataSeries> all = generateDataSeries(dataTypes);
 		for(String dsString : selectedSeriesString){
 			for(DataSeries ds : all){
 				if(ds.toString().equals(dsString)) {
@@ -165,75 +120,6 @@ public class TrainerManager extends ThreadScheduler {
 		}
 		AppLogger.logInfo(getClass(), "Selected Data Series Loaded: " + finalDs.size());
 		return finalDs;
-	}
-
-	private LinkedList<Entry<String, String>> readPossibleIndCombinations(){
-		return readIndCombinations("indicatorCouples.csv");	
-	}
-	
-	private LinkedList<Entry<String, String>> readPearsonCombinations(double treshold){
-		LinkedList<Entry<String, String>> comb = new LinkedList<Entry<String,String>>();
-		File pFile = new File(setupFolder + "pearsonCombinations.csv");
-		BufferedReader reader;
-		String readed;
-		try {
-			if(pFile.exists()){
-				reader = new BufferedReader(new FileReader(pFile));
-				reader.readLine();
-				while(reader.ready()){
-					readed = reader.readLine();
-					if(readed != null){
-						readed = readed.trim();
-						if(readed.length() > 0 && !readed.trim().startsWith("*") && readed.contains(",")){
-							if(Math.abs(Double.valueOf(readed.split(",")[2].trim())) >= treshold)
-								comb.add(new SimpleEntry<String, String>(readed.split(",")[0].trim(), readed.split(",")[1].trim()));
-						}
-					}
-				}
-				reader.close();
-			} 
-		} catch(Exception ex){
-			AppLogger.logException(getClass(), ex, "Unable to read indicator couples");
-		}
-		return comb;
-	}
-
-	private LinkedList<Entry<String, String>> readIndCombinations(String filename){
-		return readIndCombinations(new File(setupFolder + filename));
-	}
-	
-	private LinkedList<Entry<String, String>> readIndCombinations(File indCoupleFile){
-		LinkedList<Entry<String, String>> comb = new LinkedList<Entry<String,String>>();
-		BufferedReader reader;
-		String readed;
-		try {
-			if(indCoupleFile.exists()){
-				reader = new BufferedReader(new FileReader(indCoupleFile));
-				while(reader.ready()){
-					readed = reader.readLine();
-					if(readed != null){
-						readed = readed.trim();
-						if(readed.length() > 0 && !readed.trim().startsWith("*") && readed.contains(";")){
-							comb.add(new SimpleEntry<String, String>(readed.split(";")[0].trim(), readed.split(";")[1].trim()));
-						}
-					}
-				}
-				reader.close();
-			} 
-		} catch(Exception ex){
-			AppLogger.logException(getClass(), ex, "Unable to read indicator couples");
-		}
-		return comb;
-	}
-
-	private LinkedList<DataSeries> generateDataSeries(DataCategory[] dataTypes) {
-		if(dsDomain.equals("ALL")){
-			return DataSeries.allCombinations(expList.iterator().next().getIndicators(), dataTypes);
-		} else if(dsDomain.equals("SIMPLE")){
-			return DataSeries.simpleCombinations(expList.iterator().next().getIndicators(), dataTypes);
-		} else if(dsDomain.contains("PEARSON") && dsDomain.contains("(") && dsDomain.contains(")")){
-			return DataSeries.selectedCombinations(expList.iterator().next().getIndicators(), dataTypes, readPearsonCombinations(Double.parseDouble(dsDomain.substring(dsDomain.indexOf("(")+1, dsDomain.indexOf(")")))));
-		} else return DataSeries.selectedCombinations(expList.iterator().next().getIndicators(), dataTypes, readPossibleIndCombinations());
 	}
 
 	/**
@@ -282,7 +168,7 @@ public class TrainerManager extends ThreadScheduler {
 			join();
 			Collections.sort((List<AlgorithmTrainer>)getThreadList());
 			AppLogger.logInfo(getClass(), "Training executed in " + (System.currentTimeMillis() - start) + "ms");
-			saveTrainingTimes(filterTrainers(getThreadList()));
+			//saveTrainingTimes(filterTrainers(getThreadList()));
 			saveScores(filterTrainers(getThreadList()), "scores.csv");
 			AppLogger.logInfo(getClass(), "Training scores saved");
 		} catch (InterruptedException ex) {
@@ -307,26 +193,27 @@ public class TrainerManager extends ThreadScheduler {
 	 */
 	@Override
 	protected void initRun(){
-		AppLogger.logInfo(getClass(), "Train Started");
 		List<AlgorithmTrainer> trainerList = new LinkedList<AlgorithmTrainer>();
+		AppLogger.logInfo(getClass(), "Initializing Train...");
 		for(AlgorithmType algType : algTypes){
 			if(confList.get(algType) != null){
+				KnowledgeType kType = DetectionAlgorithm.getKnowledgeType(algType);
 				switch(algType){
 					case RCC:
-						trainerList.add(new FixedConfigurationTrainer(algType, null, metric, reputation, tTiming, expList, confList.get(algType).getFirst()));
+						trainerList.add(new FixedConfigurationTrainer(algType, null, getMetric(), getReputation(), getKnowledge(kType), confList.get(algType).get(0)));
 						break;
 					case PEA:
 						PearsonCombinationManager pcManager;
-						File pearsonFile = new File(scoresFolder + "pearsonCombinations.csv");
-						pcManager = new PearsonCombinationManager(pearsonFile, seriesList, tTiming, expList);
+						File pearsonFile = new File(getScoresFolder() + "pearsonCombinations.csv");
+						pcManager = new PearsonCombinationManager(pearsonFile, seriesList, getKnowledge(kType));
 						pcManager.calculatePearsonIndexes();
-						trainerList.addAll(pcManager.getTrainers(metric, reputation, confList));
+						trainerList.addAll(pcManager.getTrainers(getMetric(), getReputation(), confList));
 						pcManager.flush();
 						break;
 					default:
 						for(DataSeries dataSeries : seriesList){
 							if(DetectionAlgorithm.isSeriesValidFor(algType, dataSeries))
-								trainerList.add(new ConfigurationSelectorTrainer(algType, dataSeries, metric, reputation, tTiming, expList, confList.get(algType)));
+								trainerList.add(new ConfigurationSelectorTrainer(algType, dataSeries, getMetric(), getReputation(), getKnowledge(kType), confList.get(algType)));
 						}
 						break;
 				}
@@ -335,6 +222,7 @@ public class TrainerManager extends ThreadScheduler {
 			}	
 		}
 		setThreadList(trainerList);
+		AppLogger.logInfo(getClass(), "Train is Starting");
 	}
 
 	/* (non-Javadoc)
@@ -354,7 +242,7 @@ public class TrainerManager extends ThreadScheduler {
 		((AlgorithmTrainer)t).flush();
 	}
 	
-	private void saveTrainingTimes(List<? extends Thread> list) {
+	/*private void saveTrainingTimes(List<? extends Thread> list) {
 		BufferedWriter writer;
 		try {
 			tTiming.addAlgorithmScores(list);
@@ -367,7 +255,7 @@ public class TrainerManager extends ThreadScheduler {
 		} catch(IOException ex){
 			AppLogger.logException(getClass(), ex, "Unable to write scores");
 		}
-	}
+	}*/
 	
 	/**
 	 * Saves scores related to the executed AlgorithmTrainers.
@@ -378,8 +266,8 @@ public class TrainerManager extends ThreadScheduler {
 		BufferedWriter writer;
 		AlgorithmTrainer trainer;
 		try {
-			writer = new BufferedWriter(new FileWriter(new File(scoresFolder + filename)));
-			writer.write("data_series,algorithm_type,reputation_score,metric_score(" + metric.getMetricName() + "),configuration\n");
+			writer = new BufferedWriter(new FileWriter(new File(getScoresFolder() + filename)));
+			writer.write("data_series,algorithm_type,reputation_score,metric_score(" + getMetric().getMetricName() + "),configuration\n");
 			for(Thread tThread : list){
 				trainer = (AlgorithmTrainer)tThread;
 				if(trainer.isValidTrain()){
@@ -404,8 +292,8 @@ public class TrainerManager extends ThreadScheduler {
 	private void saveFilteredSeries(LinkedList<DataSeries> list, String filename) {
 		BufferedWriter writer;
 		try {
-			writer = new BufferedWriter(new FileWriter(new File(scoresFolder + filename)));
-			writer.write("data_series,algorithm_type,reputation_score,metric_score(" + metric.getMetricName() + "),configuration\n");
+			writer = new BufferedWriter(new FileWriter(new File(getScoresFolder() + filename)));
+			writer.write("data_series,algorithm_type,reputation_score,metric_score(" + getMetric().getMetricName() + "),configuration\n");
 			for(DataSeries ds : list){
 				writer.write(ds.toString() + "\n");			
 			}
